[package]
name = "wifipassdump"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.58.0"

features = [
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",]
